# libpleno

./: .gitignore  CMakeLists.txt  README.md  dependencies.txt
third_parties/libv/core/: CMakeLists.txt  package.xml
third_parties/libv/core/src/: build.dox  config.dox  math.dox  prog.dox  style.dox  whitespace.dox
third_parties/libv/core/src/concepts/boost/: range.dox
third_parties/libv/core/src/concepts/stl/: containers.dox  iterators.dox  utilities.dox
third_parties/libv/core/src/libv/core/: array_initializer.hpp  assert.hpp  auto_load.cpp  auto_load.hpp  console.cpp  console.hpp  cstdint.hpp  draw_tools.hpp  global.hpp  logger.cpp  logger.dox  logger.hpp  macros.hpp  miscmath.hpp  noncopyable.cpp  noncopyable.hpp  path.cpp  path.hpp  print.hpp  properties.hpp  rwlock.cpp  rwlock.hpp  tag.hpp  test.hpp  time.hpp  tr1.hpp  uri_parser.hpp
third_parties/libv/core/src/libv/core/algorithm/: copy_if.hpp  erase_if.hpp  filter_indexes.hpp  move_if.hpp
third_parties/libv/core/src/libv/core/conversions/: conversions.dox  opencv.hpp  qt.hpp  wrapper.hpp
third_parties/libv/core/src/libv/core/image/: format.hpp  image.dox  image.hpp  image_io.dox  io.cpp  io.hpp  iterator.hpp  layout.hpp  size.hpp  storage.hpp  traversal.hpp  types.dox  types.hpp
third_parties/libv/core/src/libv/core/iterator/: iterator_traits.hpp
third_parties/libv/core/src/libv/core/memory/: aligned_allocator.hpp  aligned_map.hpp  aligned_vector.hpp  opaque_pointer.hpp  polymorphic.hpp
third_parties/libv/core/src/libv/core/serialization/: associative_containers.hpp  composite_serializable.hpp  contiguous_containers.hpp  duration.hpp  eigen.dox  eigen.hpp  enums.hpp  opencv.dox  opencv.hpp  serializable.cpp  serializable.dox  serializable.hpp  serializable_properties.hpp  stl.dox  types.hpp
third_parties/libv/core/src/libv/core/type_traits/: enable_if.hpp  has_type.hpp  prevent_overflow.hpp  raw_type.hpp
third_parties/libv/core/tests/: config.cpp  config.ini  rwlock.cpp
third_parties/libv/core/tests/image/: concepts.cpp  crop.cpp  iterators.cpp
third_parties/libv/geometry/: CMakeLists.txt  package.xml
third_parties/libv/geometry/examples/calibrate_camera/: CMakeLists.txt
third_parties/libv/geometry/examples/calibrate_camera/src/: main.cpp
third_parties/libv/geometry/src/: geometry.dox
third_parties/libv/geometry/src/libv/geometry/: camera_model.cpp  camera_model.hpp  cubic_spline.hpp  drummond.cpp  drummond.hpp  edge_triangulation.cpp  edge_triangulation.hpp  epipolar_distance.cpp  epipolar_distance.hpp  global.hpp  io.hpp  numerical_diff.hpp  p3p.bib  p3p.cpp  plane_equation.cpp  plane_equation.hpp  pnp.hpp  pose.cpp  pose.hpp  ray.hpp  ros.hpp  rotation.cpp  rotation.hpp  triangulation.cpp  triangulation.hpp
third_parties/libv/geometry/src/libv/geometry/euler_angles/: euler_angles.hpp
third_parties/libv/geometry/tests/: UnifiedCameraModel.cpp  plane_equation.cpp  ray.cpp  rotation.cpp  rotation_mean.cpp
third_parties/libv/geometry/tests/euler_angles/: euler_angles.cpp
third_parties/libv/graphic/: CMakeLists.txt  package.xml  rviz.xml
third_parties/libv/graphic/examples/draw_random_3d/: CMakeLists.txt
third_parties/libv/graphic/examples/draw_random_3d/src/: main.cpp
third_parties/libv/graphic/examples/draw_random_shapes/: CMakeLists.txt
third_parties/libv/graphic/examples/draw_random_shapes/src/: main.cpp
third_parties/libv/graphic/examples/play_video/: CMakeLists.txt
third_parties/libv/graphic/examples/play_video/src/: main.cpp
third_parties/libv/graphic/src/libv/graphic/: colors.cpp  colors.hpp  global.cpp  global.hpp  palette.cpp  palette.hpp  types.hpp  viewer.cpp  viewer.hpp  viewer.ui  viewer_context.cpp  viewer_context.hpp
third_parties/libv/graphic/src/libv/graphic/icons/: icons.qrc
third_parties/libv/graphic/src/private/: TopicDisplay.cpp  TopicDisplay.hpp  rviz_display_FourWheelSteering.hpp  rviz_display_Twist.hpp  twist.mac
third_parties/lma/: CMakeLists.txt  README.md
third_parties/lma/examples/animate_sphere/: CMakeLists.txt
third_parties/lma/examples/animate_sphere/src/: main.cpp
third_parties/lma/examples/bal/: CMakeLists.txt
third_parties/lma/examples/bal/src/: bal.cpp
third_parties/lma/examples/circle/: CMakeLists.txt
third_parties/lma/examples/circle/src/: circle.cpp
third_parties/lma/examples/convert_camera_model/: CMakeLists.txt
third_parties/lma/examples/convert_camera_model/src/: main.cpp  modules.hpp  pinhole_indirect_radial.cpp  unified.cpp
third_parties/lma/examples/dependencies_graph/: CMakeLists.txt
third_parties/lma/examples/dependencies_graph/src/: dependencies_graph.cpp
third_parties/lma/examples/derivatives/: CMakeLists.txt
third_parties/lma/examples/derivatives/src/: derivatives.cpp
third_parties/lma/examples/libv-ba/: CMakeLists.txt
third_parties/lma/examples/libv-ba/src/: libv-ba.cpp
third_parties/lma/examples/rosenbrock/: CMakeLists.txt
third_parties/lma/examples/rosenbrock/src/: main.cpp
third_parties/lma/examples/sphere/: CMakeLists.txt
third_parties/lma/examples/sphere/src/: main.cpp
third_parties/lma/src/libv/lma/: derivative_tag.hpp  global.hpp  lma.hpp
third_parties/lma/src/libv/lma/color/: console.hpp
third_parties/lma/src/libv/lma/graph/: functors_container.hpp  graph.hpp  nodes.hpp
third_parties/lma/src/libv/lma/numeric/: divers.hpp  mediane.hpp
third_parties/lma/src/libv/lma/string/: display.hpp  string_utiliy.hpp
third_parties/lma/src/libv/lma/time/: tictoc.hpp  time.hpp
third_parties/lma/tests/: ad.cpp  adct.cpp  all_solver.cpp  all_solver2.cpp  bal.cpp  blaze.cpp  bundle_no_accessor.cpp  check_analytical.cpp  compression_storage.cpp  container2.cpp  copy_f.cpp  cost_and_save.cpp  create_hessian.cpp  derivatives.cpp  doublon.cpp  dynamic_vs_static.cpp  empty_solver.cpp  extract_hessian.cpp  for_each_combinaison.cpp  functor_dispatch.cpp  functor_trait.cpp  graph.cpp  is_invalid.cpp  llt.cpp  mestimator.cpp  meta_prod.cpp  meta_prod2.cpp  pcg.cpp  rename.cpp  residuals.cpp  simple.cpp  simple3.cpp  simple32.cpp  simple4.cpp  to_ref.cpp  ttt.cpp  unroll.cpp  use_toon.cpp
(+385 files in other folders)
